# qtxmlcompat

./: .gitignore  .qmake.conf  CMakeLists.txt  README.md  qtxmlcompat.pro  sync.profile
cmake/: QtXmlCompatConfig.cmake.in
src/: CMakeLists.txt  QtXmlCompat  qdomdocumentcompat.cpp  qdomdocumentcompat.h  qdomdocumentcompat_p.h  qtxmlcompat_global.h  src.pri  src.pro
tests/auto/: CMakeLists.txt  auto.pro  tst_qdomdocumentcompattest.cpp  tst_qdomdocumentcompattest.qrc
tests/auto/html/act/: data1.html  data2.html
tests/auto/html/exp/: data1.html  data2.html
tests/auto/xml/act/: [Content_Types].xml  app.xml  core.xml  document.xml  fontTable.xml  numbering.xml  settings.xml  styles.xml  webSettings.xml
tests/auto/xml/exp/: .rels  [Content_Types].xml  app.xml  core.xml  document.xml  fontTable.xml  numbering.xml  settings.xml  styles.xml  theme1.xml  webSettings.xml
