add_library(QtXmlCompat SHARED)
add_library(QtXmlCompat::QtXmlCompat ALIAS QtXmlCompat)

target_sources(QtXmlCompat
    PRIVATE
        qdomdocumentcompat.cpp
        qdomdocumentcompat.h
        qdomdocumentcompat_p.h
        qtxmlcompat_global.h
        QtXmlCompat
)

target_include_directories(QtXmlCompat
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

target_compile_definitions(QtXmlCompat PRIVATE QTXMLCOMPAT_LIBRARY)

target_link_libraries(QtXmlCompat
    PUBLIC
        Qt${QT_VERSION_MAJOR}::Core
        Qt${QT_VERSION_MAJOR}::Xml
)

if(QT_VERSION_MAJOR GREATER_EQUAL 6)
    target_link_libraries(QtXmlCompat PUBLIC Qt${QT_VERSION_MAJOR}::Core5Compat)
endif()

set_target_properties(QtXmlCompat PROPERTIES
    VERSION ${PROJECT_VERSION}
    SOVERSION ${PROJECT_VERSION_MAJOR}
    OUTPUT_NAME "Qt${QT_VERSION_MAJOR}XmlCompat"
)

if(APPLE)
    set_target_properties(QtXmlCompat PROPERTIES
        FRAMEWORK TRUE
        FRAMEWORK_VERSION A
        MACOSX_FRAMEWORK_IDENTIFIER com.github.ioriayane.QtXmlCompat
    )
endif()

install(TARGETS QtXmlCompat
    EXPORT QtXmlCompatTargets
    FRAMEWORK DESTINATION lib
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

# Generate version header
math(EXPR _ver_hex
    "(${PROJECT_VERSION_MAJOR} << 16) | (${PROJECT_VERSION_MINOR} << 8) | ${PROJECT_VERSION_PATCH}"
    OUTPUT_FORMAT HEXADECIMAL)
# Pad hex digits to 6 chars after "0x" (e.g. 0x010000)
string(REGEX REPLACE "^0x" "" _ver_hex_digits "${_ver_hex}")
string(LENGTH "${_ver_hex_digits}" _ver_hex_len)
if(_ver_hex_len LESS 6)
    math(EXPR _ver_hex_pad_count "6 - ${_ver_hex_len}")
    string(REPEAT "0" ${_ver_hex_pad_count} _ver_hex_pad)
    set(_ver_hex "0x${_ver_hex_pad}${_ver_hex_digits}")
endif()
file(GENERATE
    OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/qtxmlcompatversion.h"
    CONTENT "/* This file was generated by CMake. */
#ifndef QT_QTXMLCOMPAT_VERSION_H
#define QT_QTXMLCOMPAT_VERSION_H

#define QTXMLCOMPAT_VERSION_STR \"${PROJECT_VERSION}\"

#define QTXMLCOMPAT_VERSION ${_ver_hex}

#endif // QT_QTXMLCOMPAT_VERSION_H
"
)

# Generate Qt-style forwarding / module headers
file(GENERATE
    OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/QtXmlCompatVersion"
    CONTENT "#include \"qtxmlcompatversion.h\"
"
)
file(GENERATE
    OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/QtXmlCompatDepends"
    CONTENT "/* This file was generated by CMake with the info from <root>/src/src.pro. */
#ifdef __cplusplus /* create empty PCH in C mode */
#include <QtCore/QtCore>
#endif
"
)
file(GENERATE
    OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/QDomDocumentCompat"
    CONTENT "#include \"qdomdocumentcompat.h\"
"
)
file(GENERATE
    OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/QtXmlCompat_module"
    CONTENT "#ifndef QT_QTXMLCOMPAT_MODULE_H
#define QT_QTXMLCOMPAT_MODULE_H
#include <QtXmlCompat/QtXmlCompatDepends>
#include \"qdomdocumentcompat.h\"
#include \"qtxmlcompatversion.h\"
#endif
"
)

if(APPLE)
    # Framework headers
    install(FILES
        qdomdocumentcompat.h
        qdomdocumentcompat_p.h
        qtxmlcompat_global.h
        QtXmlCompat
        DESTINATION lib/QtXmlCompat.framework/Headers
    )
    install(FILES
        qdomdocumentcompat_p.h
        DESTINATION lib/QtXmlCompat.framework/Headers/${PROJECT_VERSION}/QtXmlCompat/private
    )
else()
    # Public headers under include/QtXmlCompat/
    install(FILES
        qdomdocumentcompat.h
        qtxmlcompat_global.h
        "${CMAKE_CURRENT_BINARY_DIR}/qtxmlcompatversion.h"
        "${CMAKE_CURRENT_BINARY_DIR}/QtXmlCompatVersion"
        "${CMAKE_CURRENT_BINARY_DIR}/QtXmlCompatDepends"
        "${CMAKE_CURRENT_BINARY_DIR}/QDomDocumentCompat"
        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/QtXmlCompat
    )
    # Module header (renamed from generated file)
    install(FILES
        "${CMAKE_CURRENT_BINARY_DIR}/QtXmlCompat_module"
        RENAME QtXmlCompat
        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/QtXmlCompat
    )
    # Private headers
    install(FILES
        qdomdocumentcompat_p.h
        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/QtXmlCompat/${PROJECT_VERSION}/QtXmlCompat/private
    )
endif()